# CryptoBot

./: .gitignore  CMakeLists.txt  CryptoBot2  README.md  crontab
include/: BotConfig.hpp  BotManager.hpp  BotType.hpp  ListingBot.hpp  NewListedCurrencyBot.hpp  PriceWatcher.hpp  ThresholdService.hpp
include/exchangeController/: AbstractExchangeController.hpp  BinanceController.hpp  GateioController.hpp  HuobiController.hpp  KucoinController.hpp
lib/amc/include/: config.hpp
lib/binacpp/: CMakeLists.txt
lib/binacpp/example/: example.cpp
lib/binacpp/include/: binacpp.h  binacpp_utils.h  binacpp_websocket.h
lib/binacpp/src/: binacpp.cpp  binacpp_websocket.cpp
lib/gateiocpp/: CMakeLists.txt
lib/gateiocpp/include/: gateiocpp.h
lib/gateiocpp/src/: gateiocpp.cpp
lib/huobiApi/include/: HuobiApi.hpp
lib/huobiApi/src/: HuobiApi.cpp
lib/jsoncpp-1.8.3/: CMakeLists.txt
lib/kucoinapi/include/: kucoinprivateapi.hpp
lib/kucoinapi/src/: kucoinprivateapi.cpp
lib/kucoincpp/include/: kucoincpp.hpp
lib/kucoincpp/src/: kucoincpp.cpp
lib/tools/include/: FixedPoint.hpp  cct_allocator.hpp  cct_flatset.hpp  cct_json.hpp  cct_smallset.hpp  cct_smallvector.hpp  cct_vector.hpp  chrono.hpp  curloptions.hpp  logger.h  logger.hpp  sha.hpp  ssl_sha.hpp  tools.hpp
lib/tools/src/: FixedPoint.cpp  cct_nonce.cpp  chrono.cpp  curloptions.cpp  logger.cpp  tools.cpp
src/: BotConfig.cpp  BotManager.cpp  ListingBot.cpp  NewListedCurrencyBot.cpp  PriceWatcher.cpp  ThresholdService.cpp  example.cpp  main.cpp
src/exchangeController/: BinanceController.cpp  ExchangeControllerFactory.cpp  GateioController.cpp  HuobiController.cpp  KucoinController.cpp
